--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,13 @@ phases:
     runtime-versions:
       python: 3.11
     commands:
-      - pip install -r requirements.txt
+      - pip install -r requirements.txt pylint
+    pre_build:
+    commands:
+      - python --version
+      - python manage.py collectstatic --noinput
+      - pylint auction_mania/**/*.py || true
+      - echo "pre build stage completed - PyLint Completed!!"
   build:
     commands:
       - echo "BUILD STARTED"
