--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,17 +4,21 @@ phases:
     runtime-versions:
       python: 3.11
     commands:
+      - pip install --upgrade pip
       - pip install -r requirements.txt pylint
+      - yum update -y
+      - yum install -y jq
     pre_build:
     commands:
       - python --version
       - python manage.py collectstatic --noinput
+      - echo "PyLint Started"
       - pylint auction_mania/**/*.py || true
       - echo "pre build stage completed - PyLint Completed!!"
   build:
     commands:
-      - echo "BUILD STARTED"
-      - python manage.py collectstatic --noinput
+      #- echo "BUILD STARTED"
+      #- python manage.py collectstatic --noinput
       - echo "BUILD COMPLETE"
 artifacts:
   files:
