--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,7 +29,7 @@ phases:
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=Pranay0930_auction_mania >result.json
       - cat result.json
       - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
-      - echo "Build stage completed"
+      - echo "Build stage completed!"
 artifacts:
   files:
     - '**/*'
