--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,10 @@
 version: 0.2
+env:
+  secrets-manager:
+    LOGIN: prod/sonar/x23201827:sonartoken
+    HOST: prod/sonar/x23201827:HOST
+    Organization: prod/sonar/x23201827:Organization
+    Project: prod/sonar/x23201827:Project
 phases:
   install:
     runtime-versions:
@@ -24,9 +30,9 @@ phases:
   build:
     commands:
       - echo "Sonar Cloud Started"
-      - sonar-scanner -Dsonar.login=Pranay0930-UnQGz@github -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=Pranay0930_auction_mania -Dsonar.organization=pranay0930 || true
+      - sonar-scanner -Dsonar.login=$LOGIN -Dsonar.host.url=$HOST -Dsonar.projectKey=$Project -Dsonar.organization=$Organization || true
       - sleep 5
-      - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=Pranay0930_auction_mania >result.json
+      - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=$Project >result.json
       - cat result.json
       - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
       - echo "Build stage completed!"
