--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,10 @@ phases:
       - pip install -r requirements.txt pylint
       - yum update -y
       - yum install -y jq
+      - echo "Installing OpenJDK 17"
+      - sudo apt-get update
+      - sudo apt-get install -y openjdk-17-jdk
+      - java -version  # Check installed Java version      
   pre_build:
     commands:
       - echo "PRE-Build stage"
