--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,10 @@ phases:
       - yum install -y jq
       - sudo yum install -y java-17-openjdk
       - java -version  # Check installed Java version
+      # Set JAVA_HOME environment variable
+      - export JAVA_HOME=/usr/lib/jvm/java-17-openjdk
+      - export PATH=$JAVA_HOME/bin:$PATH
+      - java -version  # Verify that Java 17 is being used
       
   pre_build:
     commands:
