--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,9 +26,9 @@ phases:
       - echo "PRE-Build stage"
       - python --version
       - python manage.py collectstatic --noinput
-      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
-      - unzip ./sonar-scanner-cli-3.3.0.1492-linux.zip
-      - export PATH=$PATH:./sonar-scanner-3.3.0.1492-linux/bin/
+      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-6.0.0.4432-linux
+      - unzip ./sonar-scanner-cli-6.0.0.4432-linux
+      - export PATH=$PATH:./sonar-scanner-6.0.0.4432-linux/bin/
       - echo "pre build stage completed"      
       - echo "PyLint Started"
       - pylint auction_mania/**/*.py || true
